# Cosy12

./: CMakeLists.txt  Cosy12_Model4.cpp  Cosy12_Model4.h  Cosy12_Model4.mk  Cosy12_Model4_capi_host.h  Cosy12_Model4_comp.rsp  Cosy12_Model4_manifest.txt  README.md  codeInfo.mat  multiword_types.h  rtGetNaN.cpp  rt_defines.h  rt_look.h  rt_nonfinite.cpp  rtmodel.h  rtw_proj.tmw  test_libcosy.py
frontend/: script.js  style.css
html/data/: data.js  model.js  pages.js
html/pages/: Cosy12_Model4_interface.html  Cosy12_Model4_reducedblocks.html  Cosy12_Model4_subsystems.html  Cosy12_Model4_survey.html
src/: CMakeLists.txt  Cosy12_Model4.bat  Cosy12_Model4.cpp  Cosy12_Model4.dvi  Cosy12_Model4.mat  Cosy12_Model4.rsp  Cosy12_Model4_capi.cpp  Cosy12_Model4_capi.h  Cosy12_Model4_data.cpp  Cosy12_Model4_private.h  Cosy12_Model4_types.h  Makefile  README.md  app.py  buildInfo.mat  builtin_typeid_types.h  codedescriptor.dmr  compileInfo.mat  requirements.txt  rtGetNaN.h  rt_look1d.h  rt_main.cpp  rt_nonfinite.h  rtwtypes.h  rtwtypeschksum.mat
src/templates/: index.html
templates/: index.html
tmwinternal/: simulink_cache.xml
